Thomas/WAO/19+20. Kubernetes Basics/nodeapplication/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: kub2
  labels:
    app: app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-pod
  template:
    metadata:
      labels:
        app: app-pod
    spec:
      containers:
        - name: app
          image: registry.gitlab.au.dk/swwao/demo-projs/typescript-mongodb-crud:latest
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: my-registry-credentials
