Thomas/WAO/19+20. Kubernetes Basics/nodeapplication/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: kub2
spec:
  selector:
    app: app-pod # Pods to target
  ports:
    - protocol: TCP
      port: 3000 # Port on the service
      targetPort: 3000 # Port on the Pods
  type: ClusterIP # Type of the service (default)
